@@ -2,8 +2,8 @@
   Colors
  */
 
-$color-primary: #3498db !default;
-$color-secondary: #46637f !default;
+$color-primary: #3B234A !default;
+$color-secondary: #BAAFC4 !default;
 $color-edit: #75ad0a !default;
 
 $color-default: #2980b9 !default;
